<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryFaded"
    android:orientation="vertical"
    tools:context="com.example.daniel.singlescreenapp.MainActivity">

    <ImageView
        android:id="@+id/ImageViewBike"
        android:layout_width="match_parent"
        android:layout_height="199dp"
        android:adjustViewBounds="false"
        android:scaleType="centerCrop"
        android:src="@drawable/bike" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:text="@string/descriptionText"
        android:textSize="@dimen/textSizeMedium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="45dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:tint="@color/icons"
            app:srcCompat="@android:drawable/ic_lock_idle_alarm" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:text="@string/horary"
            android:textSize="@dimen/textSizeSmall" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_gravity="top|center"
                android:layout_marginTop="5dp"
                android:tint="@color/icons"
                app:srcCompat="@android:drawable/stat_sys_speakerphone" />

            <TextView
                android:id="@+id/textViewCall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/callText"
                android:textAlignment="center"
                android:textSize="@dimen/textSizeSmall" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_gravity="top|center"
                android:layout_marginTop="5dp"
                android:tint="@color/icons"
                app:srcCompat="@android:drawable/sym_action_email" />

            <TextView
                android:id="@+id/textViewEMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/emailText"
                android:textAlignment="center"
                android:textSize="@dimen/textSizeSmall" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_gravity="top|center"
                android:layout_marginTop="5dp"
                android:tint="@color/icons"
                app:srcCompat="@android:drawable/ic_dialog_map" />

            <TextView
                android:id="@+id/textViewGo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/goText"
                android:textAlignment="center"
                android:textSize="@dimen/textSizeSmall" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
